--- a/file4.html
+++ b/file4.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Anchor</title>
+  </head>
+  <body>
+    <p><a href ="https://tarun160603.github.io/webi/hot2.html"  target = "_blank"><img src = "https://cdn.vox-cdn.com/thumbor/xBIBkXiGLcP-kph3pCX61U7RMPY=/0x0:1400x788/1200x800/filters:focal(588x282:812x506)/cdn.vox-cdn.com/uploads/chorus_image/image/70412073/0377c76083423a1414e4001161e0cdffb0b36e1f_760x400.0.png" height = "200" width = "300"></a></p>
+    <p>To go to the first page</p><br>
+    OR JUST
+    <p><a href = "https://tarun160603.github.io/webi/">Click here to go to the first page of the website</a></p>
+  </body>
+</html>
